kustomize/overlays/staging/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nastenka-kustomize
spec:
  template:
    spec:
      containers:
      - image: reg.edgeclusters.com/academy/nastenka:1.1
        name: nastenka-kustomize
