kustomize/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nastenka-kustomize
spec:
  rules:
  - host: apps.edgeclusters.com
    http:
      paths:
      - backend:
          service:
            name: nastenka-kustomize
            port:
              number: 80
        path: /nastenka-kustomize-staging(/|$)(.*)
        pathType: Prefix
